--- a/src/shared/components/cards/card-social-traffic/card-social-traffic.component.html
+++ b/src/shared/components/cards/card-social-traffic/card-social-traffic.component.html
@@ -40,7 +40,7 @@
                   </div>
                   <div></div>
                   <div>
-                    <button (click)="closeModal()" class="modal-close cursor-pointer z-50">
+                    <button (onclick)="closeModal()" class="modal-close cursor-pointer z-50">
                       <svg class="fill-current text-black" xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18">
                         <path
                           d="M6.83 6l-5 5L2 10.83 6.83 6 2 1.17 3.17 0 8 4.83 12.83 0 14 1.17 9.17 6 14 10.83 12.83 12 8 7.17 3.17 12 2 10.83 6.83 6z"
@@ -192,9 +192,7 @@
                           Municipio*:
                           </label>
                           <select class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:focus:ring-blue-500 dark:focus:border-blue-500" formControlName="Sexo">
-                            <option value="1">Tlaxcala</option>
-                            <option value="2">Puebla</option>
-                            <option value="2">Oaxaca</option>
+                            <option *ngFor="let option of municipiosOptions" [value]="option.nombre">{{ option.label }}</option>
                           </select>
                         </div>
                       </div>
