--- a/src/shared/components/cards/card-bar-prograsmasocial/card-bar-prograsmasocial.component.css
+++ b/src/shared/components/cards/card-bar-prograsmasocial/card-bar-prograsmasocial.component.css
@@ -63,28 +63,35 @@ body {
   border-radius: 4px;
   outline: none;
   position: relative;
-  width: 100%; /* Asegúrate de que tenga un ancho del 100% */
+  width: 100%;
 }
 
 .color-picker:focus {
   @apply ring ring-blue-300;
 }
-/* Agrega este código en tu archivo styles.css */
 
 .custom-label {
   display: block;
-  font-size: 0.875rem; /* Tamaño del texto */
-  font-weight: 500; /* Grosor de la fuente */
-  color: #4a5568; /* Color del texto */
+  font-size: 0.875rem;
+  font-weight: 500;
+  color: #4a5568;
 }
 
 .custom-textarea {
   margin-top: 0.25rem;
   padding: 0.5rem;
   width: 100%;
-  border: 1px solid #e2e8f0; /* Color del borde */
-  border-radius: 0.375rem; /* Radio de borde */
-  resize: none; /* Evitar redimensionamiento */
+  border: 1px solid #e2e8f0;
+  border-radius: 0.375rem;
+  resize: none; 
+}
+
+.color-circle {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  display: inline-block;
+  margin-right: 8px;
 }
 
 
