--- a/src/shared/components/cards/card-bar-prograsmasocial/card-bar-prograsmasocial.component.html
+++ b/src/shared/components/cards/card-bar-prograsmasocial/card-bar-prograsmasocial.component.html
@@ -23,7 +23,7 @@
               <div  class=" modal-content py-4 text-left px-6">
                 <div class="flex justify-between items-center pb-3">
                   <div>
-                    <p class="text-2xl font-bold -mr-56">{{ showModal ? "AGREGAR " : "ACTUALIZAR " }}  PROGRAMAS SOCIALES</p>
+                    <p class="text-2xl font-bold -mr-56"> PROGRAMAS SOCIALES</p>
                   </div>
                   <div></div>
                   <div>
@@ -122,8 +122,9 @@
                           <br>      
                           <div class="flex justify-end">
                             <button type="submit" class="bg-purple-900 text-white py-2 px-4 rounded-md hover:bg-red-950">
-                              {{ showModal ? "AGREGAR " : "ACTUALIZAR " }}
+                              {{ isUpdating ? "ACTUALIZAR " : "AGREGAR " }}  
                             </button>
+                            
                           </div>
                                                   
                     </form>
