--- a/src/shared/components/cards/card-page-visits/card-page-visits.component.html
+++ b/src/shared/components/cards/card-page-visits/card-page-visits.component.html
@@ -4,7 +4,197 @@
         <div class="flex flex-wrap items-center">
             <div class="relative w-full px-4 max-w-full flex-grow flex-1">
                 <!-- Button trigger modal -->
-                <app-modal></app-modal><br><br>
+
+
+<div class="flex justify-between">
+  <div>
+    <button (click)="openModal()" class="min-w-140-px bg-purple-900 text-white py-2 rounded-md hover:bg-purple-950">Agregar usuario</button>
+
+  </div>
+  <div>
+  </div>
+  <div>
+    <button title="Descargar base de datos de usuarios" class="mr-5">
+      <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-cloud-download" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+        <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+        <path d="M19 18a3.5 3.5 0 0 0 0 -7h-1a5 4.5 0 0 0 -11 -2a4.6 4.4 0 0 0 -2.1 8.4" />
+        <path d="M12 13l0 9" />
+        <path d="M9 19l3 3l3 -3" />
+      </svg>
+    </button>
+    <input
+      class="border border-gray-300 rounded-md focus:outline-none focus:border-blue-500"
+      type="text"
+      placeholder="Buscar"/>
+  </div>
+</div>
+<!-- modal -->
+<div class="modal fixed inset-0  flex" *ngIf="showModal">
+  <div class="flex items-center justify-center w-full">
+    <div class="modal-overlay absolute w-full h-full bg-gray-800 opacity-50"></div>
+    <div class="modal-container bg-white w-6/12 items-center mx-auto rounded shadow-lg z-50 overflow-y-auto">
+      <!-- Add your modal content here -->
+      <div  class=" modal-content py-4 text-left px-6">
+        <div class="flex justify-between items-center pb-3">
+          <div>
+            <p class="text-2xl font-bold -mr-56">REGISTRAR USUARIO</p>
+          </div>
+          <div></div>
+          <div>
+            <button (click)="closeModal();ResetForm()" class="modal-close cursor-pointer z-50">
+              <svg class="fill-current text-black" xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18">
+                <path
+                  d="M6.83 6l-5 5L2 10.83 6.83 6 2 1.17 3.17 0 8 4.83 12.83 0 14 1.17 9.17 6 14 10.83 12.83 12 8 7.17 3.17 12 2 10.83 6.83 6z"
+                ></path>
+              </svg>
+            </button>
+          </div>
+        </div>
+        <!-- fomulario -->
+        <div class="flex mt-8 p-6 bg-white rounded-md justify-items-stretch">
+          <form [formGroup]="UsuarioForm" (ngSubmit)="submit()">
+            <div class="flex flex-wrap">
+              <div class="w-full lg:w-6/12 px-4">
+                <div class="relative w-full mb-6">
+                  <label
+                    class="block uppercase text-blueGray-600 text-xs font-bold mb-2"
+                    htmlFor="grid-password"
+                  >
+                    Nombre
+                  </label>
+                  <input
+                  formControlName="nombre"
+                    required
+                    id="nombre"
+                    type="text"
+                    class="border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150"
+                    value=""
+                  />
+
+                </div>
+              </div>
+              <div class="w-full lg:w-6/12 px-4">
+                <div class="relative w-full mb-3">
+                  <label
+                    class="block uppercase text-blueGray-600 text-xs font-bold mb-2"
+                    htmlFor="grid-password"
+                  >
+                    Apellido paterno
+                  </label>
+                  <input
+                  formControlName="apellidoPaterno"
+                    required
+                    id="apellido-paterno"
+                    type="text"
+                    class="border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150"
+                    value=""
+                  />
+                </div>
+              </div>
+              <div class="w-full lg:w-6/12 px-4">
+                <div class="relative w-full mb-3">
+                  <label
+                    class="block uppercase text-blueGray-600 text-xs font-bold mb-2"
+                    htmlFor="grid-password"
+                  >
+                    Apellido materno
+                  </label>
+                  <input
+                  formControlName="apellidoMaterno"
+                    required
+                    id="apellido-materno"
+                    type="text"
+                    class="border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150"
+                    value=""
+                  />
+                </div>
+              </div>
+              <div class="w-full lg:w-6/12 px-4">
+                <div class="relative w-full mb-3">
+                  <label
+                    class="block uppercase text-blueGray-600 text-xs font-bold mb-2"
+                    htmlFor="grid-password"
+                  >
+                    Correo
+                  </label>
+                  <input
+                  formControlName="correo"
+                    required
+                    id="correo"
+                    type="email"
+                    class="border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150"
+                    value=""
+                  />
+                </div>
+              </div>
+
+              <div class="w-full lg:w-6/12 px-4">
+                <div class="relative w-full mb-3">
+                  <label
+                    class="block uppercase text-blueGray-600 text-xs font-bold mb-2"
+                    htmlFor="grid-password"
+                  >
+                    Contraseña
+                  </label>
+                  <input
+                  formControlName="contraseña"
+                    requirede
+                    id="contrasena"
+                    type="password"
+                    class="border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150"
+                    value=""
+                  />
+                </div>
+              </div>
+              <div class="w-full lg:w-6/12 px-4">
+                <div class="relative w-full mb-3">
+                  <label class="block uppercase text-blueGray-600 text-xs font-bold mb-2 label" htmlFor="grid-password">
+                    ESTATUS
+                  </label>
+                  <label class="relative inline-flex items-center cursor-pointer">
+                    <input type="checkbox" value="" class="sr-only peer" formControlName="Estatus">
+                    <div class="w-11 h-6 bg-gray-200 peer-focus:outline-none peer-focus:ring-4 peer-focus:ring-blue-300 dark:peer-focus:ring-blue-800 rounded-full peer dark:bg-gray-700 peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-[2px] after:start-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all dark:border-gray-600 peer-checked:bg-green-500"></div>
+                    <span class="ms-3 text-sm font-medium text-gray-900 dark:text-gray-300"></span>
+                  </label>
+
+                </div>
+              </div>
+              <div>
+
+              </div>
+              <div class="w-full lg:w-6/12 px-4">
+                <div class="relative w-full mb-3">
+                  <label
+                    class="block uppercase text-blueGray-600 text-xs font-bold mb-2"
+                    htmlFor="grid-password"
+                  >
+                    Rol
+                  </label>
+                  <select id="rol"  class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:focus:ring-blue-500 dark:focus:border-blue-500">
+                    <option >Director</option>
+                    <option value="administrador">Administrador</option>
+                  </select><br>
+
+                </div>
+              </div>
+            </div>
+            <div class="flex justify-between">
+              <div></div>
+              <div></div>
+              <div>
+                <button type="submit" class="bg-purple-900 text-white py-2 px-4 rounded-md hover:bg-red-950">
+                  {{ isUpdating ? "ACTUALIZAR " : "AGREGAR " }}
+                </button>              </div>
+            </div>
+          </form>
+        </div>
+
+      </div>
+
+    </div>
+  </div>
+</div>
+
             </div>
 
         </div>
@@ -39,12 +229,24 @@
                         </td>
                         <td>
                             <div class="btn-group" role="group" aria-label="Acciones">
-                                <button type="button" class="btn btn-warning btn-sm">
-                                <i class="ti ti-pencil"></i> <!-- Ícono de edición -->
-                            </button>
-                                <button type="button" class="btn btn-danger btn-sm" (click)="eliminarUsuario(usuario.Id)">
-                                <i class="ti ti-trash"></i> <!-- Ícono de eliminación -->
-                            </button>
+                              <button (click)="eliminarUsuario(usuario.id)">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-trash" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                  <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                                  <path d="M4 7l16 0" />
+                                  <path d="M10 11l0 6" />
+                                  <path d="M14 11l0 6" />
+                                  <path d="M5 7l1 12a2 2 0 0 0 2 2h8a2 2 0 0 0 2 -2l1 -12" />
+                                  <path d="M9 7v-3a1 1 0 0 1 1 -1h4a1 1 0 0 1 1 1v3" />
+                                </svg>
+                              </button>
+                              <button class="ml-4" (click)="setDataModalUpdate(usuario);openModal()">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-edit" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                  <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                                  <path d="M7 7h-1a2 2 0 0 0 -2 2v9a2 2 0 0 0 2 2h9a2 2 0 0 0 2 -2v-1" />
+                                  <path d="M20.385 6.585a2.1 2.1 0 0 0 -2.97 -2.97l-8.415 8.385v3h3l8.385 -8.415z" />
+                                  <path d="M16 5l3 3" />
+                                </svg>
+                              </button>
                             </div>
                         </td>
                     </tr>
