--- a/src/shared/components/sidebar/sidebar.component.html
+++ b/src/shared/components/sidebar/sidebar.component.html
@@ -74,7 +74,7 @@
       <ul class="md:flex-col md:min-w-full flex flex-col list-none">
         <li class="items-center">
           <a
-            [routerLink]="['dashboard']"
+            [routerLink]="['bienvenida']"
             class="text-xs uppercase py-3 font-bold block"
             routerLinkActive
             #adminDashboard="routerLinkActive"
@@ -91,6 +91,28 @@
               "
             ></i>
             Bienvenida
+          </a>
+        </li>
+
+        <li class="items-center">
+          <a
+            [routerLink]="['dashboard']"
+            class="text-xs uppercase py-3 font-bold block"
+            routerLinkActive
+            #adminDashboard="routerLinkActive"
+            [ngClass]="
+              adminDashboard.isActive
+                ? 'text-purple-900 hover:text-purple-900'
+                : 'text-blueGray-700 hover:text-blueGray-500'
+            "
+          >
+            <i
+              class="fas fa-tv mr-2 text-sm"
+              [ngClass]="
+                adminDashboard.isActive ? 'opacity-75' : 'text-blueGray-300'
+              "
+            ></i>
+            Tablero
           </a>
         </li>
 
