--- a/src/app/pages/panel/bienvenida/bienvenida.component.html
+++ b/src/app/pages/panel/bienvenida/bienvenida.component.html
@@ -13,9 +13,19 @@
                       </svg>
                       ¡Bienvenido!
                     </h6>
-                  </div>
-                  <h2 class="text-white text-xl font-semibold">Cristia Carreto</h2>
-                </div>
+                
+                    <div class="flex justify-center ...">
+                      <div class="text-white ml-5">Cristian Carreto</div>
+                      <div class="text-white ml-5">Administrador</div>
+                      <div class="text-white ml-5">Carreto154@gmail.com</div>
+                      <div class="text-white ml-5">Asistencia Social</div>
+
+                    </div>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                
               </div>
             </div>
           </div>
