--- a/src/shared/components/cards/card-page-visits/card-page-visits.component.html
+++ b/src/shared/components/cards/card-page-visits/card-page-visits.component.html
@@ -137,9 +137,9 @@
                     Contraseña
                   </label>
                   <input
-                  formControlName="contraseña"
+                  formControlName="password"
                     requirede
-                    id="contrasena"
+                    id="password"
                     type="password"
                     class="border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150"
                     value=""
@@ -170,9 +170,9 @@
                   >
                     Rol
                   </label>
-                  <select id="rol"  class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:focus:ring-blue-500 dark:focus:border-blue-500">
-                    <option >Director</option>
-                    <option value="administrador">Administrador</option>
+                  <select formControlName="rolId" id="rolId"  class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:focus:ring-blue-500 dark:focus:border-blue-500">
+                    <option value="1">Administrador</option>
+                    <option value="2">Director</option>
                   </select><br>
 
                 </div>
