--- a/src/shared/components/dropdowns/user-dropdown/user-dropdown.component.html
+++ b/src/shared/components/dropdowns/user-dropdown/user-dropdown.component.html
@@ -11,7 +11,7 @@
       <img
         alt="..."
         class="w-full rounded-full align-middle border-none shadow-lg"
-        src="https://www.informador.mx/__export/1591209620028/sites/elinformador/img/2020/06/03/whatsapp_image_2020-06-03_at_1_22_36_pm_x1x_crop1591209586178.jpg_788543494.jpg"
+        src="https://th.bing.com/th/id/R.550f49a459548599a5a4ea1c67fc0244?rik=ji0NKVGInUZxuw&pid=ImgRaw&r=0"
       />
     </span>
   </div>
