--- a/src/shared/components/cards/card-bar-prograsmasocial/card-bar-prograsmasocial.component.html
+++ b/src/shared/components/cards/card-bar-prograsmasocial/card-bar-prograsmasocial.component.html
@@ -124,7 +124,7 @@
                           TODOS LOS CAMPOS MARCADOS CON * SON REQUERIDOS
                           <div class="flex justify-end">
                             <button type="submit" class="bg-purple-900 text-white py-2 px-4 rounded-md hover:bg-red-950" >
-                              {{ isUpdating ? "ACTUALIZAR " : "AGREGAR " }}
+                              {{ isUpdating ? " AGREGAR" : "ACTUALIZAR" }}
                             </button>
                           </div>
                           
