--- a/src/app/pages/panel/Beneficiario/beneficiario.component.html
+++ b/src/app/pages/panel/Beneficiario/beneficiario.component.html
@@ -5,7 +5,15 @@
   </div>
 </div>
 
-
+<div class="w-full lg:w-6/12 px-4">
+  <div class="relative w-full mb-3">
+      <label class="block uppercase text-blueGray-600 text-xs font-bold mb-2" htmlFor="grid-password">
+Ubicar en el mapa*:
+</label>
+      <input id="searchInput" class="controls border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150" type="text" placeholder="Enter a location"
+      />
+  </div>
+</div>
 
 <div class="flex flex-wrap">
   <div class="w-full px-4">
