--- a/src/styles.css
+++ b/src/styles.css
@@ -5,7 +5,7 @@
 body {
     margin: 0;
     padding: 0;
-    background-image: url('src/shared/components/footer-admin/image/dif.jpg'); /* Reemplaza 'ruta/de/tu/imagen.jpg' con la ruta de tu imagen de fondo */
+    background-image: url('src/shared/components/footer-admin/image/Dif 3.jpg'); /* Reemplaza 'ruta/de/tu/imagen.jpg' con la ruta de tu imagen de fondo */
     background-size: cover;
     background-position: center;
     font-family: Arial, sans-serif;
