--- a/src/shared/components/cards/card-social-traffic/card-social-traffic.component.html
+++ b/src/shared/components/cards/card-social-traffic/card-social-traffic.component.html
@@ -210,11 +210,19 @@
                                             </div>
                                             <div class="w-full lg:w-6/12 px-4">
                                                 <div class="relative w-full mb-3">
-                                                    <label class="block uppercase text-blueGray-600 text-xs font-bold mb-2" htmlFor="ubicacion">
+                                                    <label class="block uppercase text-blueGray-600 text-xs font-bold mb-2" formControlName="ubicacion">
                                                       Ubicar en el mapa*:
                                                   </label>
                                                     <input id="searchInput" class="controls border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150" type="text" placeholder="Enter a location"
                                                     />
+                                                    
+                                                    <button type="submit" class="bg-purple-900 text-white py-2 px-4 rounded-md hover:bg-red-950" (click)="map()">
+                                                       direccion
+                                                      </button>
+                                                      <button type="submit" class="bg-purple-900 text-white py-2 px-4 rounded-md hover:bg-red-950" (click)="mapa2()">
+                                                        latitud y longitud
+                                                       </button>
+                                                    
                                                 </div>
                                             </div>
                                         </div>
@@ -231,7 +239,7 @@
                                         <br>
                                         <div class="flex justify-end">
                                             <button type="submit" class="bg-purple-900 text-white py-2 px-4 rounded-md hover:bg-red-950">
-                                      {{ isUpdating ? "ACTUALIZAR " : "AGREGAR " }}
+                                      {{ isUpdating ? "ACTUALIZAR " : "AGREGAR " }}AGREGAR
                                     </button>
 
                                         </div>
