--- a/src/shared/components/sidebar/sidebar.component.html
+++ b/src/shared/components/sidebar/sidebar.component.html
@@ -118,7 +118,7 @@
 
         <li class="items-center">
           <a
-            [routerLink]="['settings']"
+            [routerLink]="['usuarios']"
             class="text-xs uppercase py-3 font-bold block"
             routerLinkActive
             #adminSettings="routerLinkActive"
