--- a/src/app/pages/panel/usuarios/usuarios.component.html
+++ b/src/app/pages/panel/usuarios/usuarios.component.html
@@ -1,1 +1,5 @@
-<p>usuarios works!</p>
+<div class="flex flex-wrap">
+  <div class="w-full xl:w-12/12 mb-12 xl:mb-0 px-4">
+    <app-card-page-visits></app-card-page-visits>
+  </div>
+</div>
